
  HCAT-368 Documentation improvements: doc set & API docs (lefty via gates)

  HCAT-387 Trunk should point to 0.10 snapshot to match hive trunk (toffer)

  HCAT-329 HCatalog build fails with pig 0.9 (traviscrawford via hashutosh)

  HCAT-233 gitignore file (enis via gates)

  OPTIMIZATIONS

  BUG FIXES
  HCAT-497 HCatContext should use the jobconf instead of its own conf (traviscrawford)

  HCAT-494 MultiOutputFormat in 0.23 fails to setAliasConf() correctly. (mithun via toffer)

  HCAT-507 e2e harness failing on 0.23 (toffer)

  HCAT-502 HCatalog dependency resolution fails due to missing repo (traviscrawford)

  HCAT-490 HCatStorer() throws error when the same partition key is present in records in more than one tasks running as part of the same job (amalakar via traviscrawford)

  HCAT-499 Multiple store commands does not work with Hadoop23 (rohinip via avandana)

  HCAT-501 HBase storage handler tests failing in trunk (traviscrawford)

  HCAT-498 TestNotificationListener failing in trunk (traviscrawford)

  HCAT-397 Removal of unused parameter hadoop.clientside.fs.operations (khorgath via traviscrawford)

  HCAT-483 HCatBaseStorer.getHCatFSFromPigFS fails when Table schema is not provided (pengfeng via traviscrawford)

  HCAT-477 Drop table API in webhcat client does not respect the "ifExists" parameter.

  HCAT-471 Test HCat_ShowDes_1[1-3] fails (vikram.dixit via gates)

  HCAT-470 Update HCat version numbers in Templeton doc set (lefty via gates)

  HCAT-472 HCatalog should use Deserializer in the read path instead of SerDe (traviscrawford)

  HCAT-467 Templeton scripts point to wrong jar name (jghoman via traviscrawford)

  HCAT-436 JSON SerDe column misnaming on CTAS (khorgath via gates)

  HCAT-449 HCatLoader is mistakenly identifying Configuration parameters to store (cdrome via traviscrawford)

  HCAT-456 storage-handlers tests failing due to missing commons-io (traviscrawford)
